@@ -1,4 +1,5 @@
 1.0.2 - updated to use charstring asprintf analogs
+	fixed uninitialized sendcolumninfo on server-side
 
 1.0.1 - updated sqlr-bench to create "db"-bench.png
 	added edoc-generated API docs for the Erlang API
